--- a/src/app/Auth/login/login.component.html
+++ b/src/app/Auth/login/login.component.html
@@ -106,7 +106,7 @@
     </form>
 
     <div class="login-footer">
-      <p>¿No tienes cuenta? <a href="#" (click)="onRegister($event)">Regístrate</a></p>
+      <p>¿No tienes cuenta? <a href="/registro">Regístrate</a></p>
     </div>
   </div>
 </div>
