--- a/src/app/Auth/membresia/membresia.component.html
+++ b/src/app/Auth/membresia/membresia.component.html
@@ -1,6 +1,6 @@
 <div class="min-h-screen bg-black text-white font-sans">
   <!-- Navbar -->
-  <header class="flex items-center justify-between px-8 py-4 bg-neutral-900 fixed top-0 w-full z-50">
+  <header class="flex items-center justify-between px-8 py-4 bg-black fixed top-0 w-full z-50">
     <!-- Logo con triángulo a la izquierda -->
     <a href="/" class="inline-flex items-center space-x-2">
       <!-- Triángulo -->
@@ -12,11 +12,11 @@
     </a>
 
     <!-- Links -->
-    <nav class="hidden md:flex space-x-8 text-white text-lg font-bold">
-      <a href="#" class="hover:text-white">🏡 Inicio</a>
-      <a href="#" class="hover:text-white">💪 Servicios</a>
-      <a routerLink="/membresia" class="hover:text-white">💳 Planes</a>
-      <a href="/contacto" class="hover:text-white">📞 Contacto</a>
+    <nav class="hidden md:flex space-x-8 text-white text-base font-bold uppercase tracking-wide">
+      <a routerLink="/inicio" class="hover:text-white">Inicio</a>
+      <a routerLink="/servicios" class="hover:text-white">Servicios</a>
+      <a routerLink="/membresia" class="hover:text-white">Planes</a>
+      <a routerLink="/contacto" class="hover:text-white">Contacto</a>
     </nav>
 
     <!-- Botón -->
@@ -33,7 +33,7 @@
   <!-- Encabezado -->
   <div class="text-center mb-16">
     <h2 class="text-5xl font-extrabold text-white tracking-tight drop-shadow-lg">
-      Otras Membresías
+      Otras membresías
     </h2>
     <p class="text-gray-400 mt-6 text-lg max-w-3xl mx-auto leading-relaxed">
       Encuentra el plan perfecto para ti. Diseñamos opciones para cada estilo de vida,
