--- a/src/app/Auth/contacto/contacto.component.html
+++ b/src/app/Auth/contacto/contacto.component.html
@@ -195,11 +195,11 @@
           <div class="flex flex-col sm:flex-row gap-4 justify-center">
             <a href="tel:+51930682185" (click)="goToWhatsapp()" 
               class="bg-zinc-800 hover:bg-zinc-700 text-white px-6 py-3 rounded-lg font-semibold transition-colors duration-200 border border-zinc-700">
-              📞 Llamar ahora
+              Llamar ahora
             </a>
             <button (click)="toggleMapa()" 
               class="bg-orange-600 hover:bg-orange-700 text-white px-6 py-3 rounded-lg font-semibold transition-colors duration-200">
-              {{ mostrarMapa ? "⬆️ Ocultar ubicación" : "🏃‍♂️ Ver ubicación" }}
+              {{ mostrarMapa ? " Ocultar ubicación" : " Ver ubicación" }}
             </button>
           </div>
 
